--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,75 +1,65 @@
-<!DOCTYPE html>
-<html lang="en" class="h-100">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-        <meta name="generator" content="Jekyll v3.8.5">
-        <title>{% block title %}Blog de Xavi{% endblock %}</title>
-        {% block stylesheets %}
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-            <link rel="stylesheet" href="{{ asset('css/sticky-footer-navbar.css') }}">
-        {% endblock %}
-    </head>
-    <body class="d-flex flex-column h-100">
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">Blog de Xavi</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    {% if app.user is null %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_login') }}">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_register') }}">Register</a>
-                    </li>
-                        {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
-                        </li>
-                        {% if is_granted("ROLE_ADMIN") %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_admin') }}">Admin</a>
-                            </li>
-                        {% endif %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>{% block title %}CaliDAW{% endblock %}</title>
 
-                    {% endif %}
-                </ul>
-                <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
-    </header>
-    <main role="main" class="flex-shrink-0">
-        <div class="container">
-            {% block body %}{% endblock %}
+    {% block stylesheets %}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ asset('css/sticky-footer-navbar.css') }}">
+    {% endblock %}
 
-        </div>
-    </main>
-    <footer class="footer mt-auto py-3">
-        <div class="container">
-            <span class="text-muted">Blog Xavi 2019.</span>
-        </div>
-    </footer>
+</head>
 
-    {% block footer %}{% endblock %}
-        {% block javascripts %}
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-        {% endblock %}
-    </body>
+<body>
+<div id="menu">
+    <div id="menui"><p id="logo"><a id="letra-logo" href="{{ path('app_homepage') }}">CALIDAW</a>
+    </div>
+    <div id="menum"><ul>
+            <li id="focus"><a class="letra-menu separacion" href="{{ path('exercise') }}">Ejercicios</a></li>
+            <li><a class="letra-menu separacion" href="#slide-three">Rutinas</a></li>
+            <li><a class="letra-menu separacion" href="#slide-four">Nutrición</a></li>
+            <li><a class="letra-menu separacion" href="#slide-four">Tienda</a></li>
+        </ul>
+        {% if app.user is null %}
+    </div>
+    <div id="menud">
+        <a href="{{ path('app_login') }}">Iniciar Sesión</a>
+
+        <a href="{{ path('app_register') }}" >Registrarse</a>
+    </div>
+    {% else %}
+        <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+
+    {% endif %}
+</div>
+</div>
+
+{% block body %}{% endblock %}
+<script  src="js/index.js"></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script  src="js/indexx.js"></script>
+
+<footer><div id="debajo">
+        <ul>
+            <li><a class="letra-footer separacionfooter separacion" href="#slide-two">Facebook</a></li>
+            <li><a class="letra-footer separacion" href="#slide-three">Twitter</a></li>
+            <li><a class="letra-footer separacion" href="#slide-four">Pinterest</a></li>
+            <li><a class="letra-footer separacion" href="#slide-four">Instagram</a></li>
+            <li><a class="letra-footer separacion" href="#slide-four">Youtube</a></li>
+        </ul></div></footer>
+</div>
+
+
+
+
+
+
+</body>
+
 </html>
+
+
 
 
 
