--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,8 +16,8 @@
     <div id="menui"><p id="logo"><a id="letra-logo" href="{{ path('app_homepage') }}">CALIDAW</a>
     </div>
     <div id="menum"><ul>
-            <li id="focus"><a class="letra-menu separacion" href="{{ path('exercise') }}">Ejercicios</a></li>
-            <li><a class="letra-menu separacion" href="#slide-three">Rutinas</a></li>
+            <li id="focus"><a class="letra-menu separacion" href="{{ path('muscle') }}">Ejercicios</a></li>
+            <li><a class="letra-menu separacion" href="{{ path('app_level') }}">Rutinas</a></li>
             <li><a class="letra-menu separacion" href="#slide-four">Nutrición</a></li>
             <li><a class="letra-menu separacion" href="#slide-four">Tienda</a></li>
         </ul>
@@ -40,14 +40,7 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script  src="js/indexx.js"></script>
 
-<footer><div id="debajo">
-        <ul>
-            <li><a class="letra-footer separacionfooter separacion" href="#slide-two">Facebook</a></li>
-            <li><a class="letra-footer separacion" href="#slide-three">Twitter</a></li>
-            <li><a class="letra-footer separacion" href="#slide-four">Pinterest</a></li>
-            <li><a class="letra-footer separacion" href="#slide-four">Instagram</a></li>
-            <li><a class="letra-footer separacion" href="#slide-four">Youtube</a></li>
-        </ul></div></footer>
+
 </div>
 
 
