--- a/templates/level/index.html.twig
+++ b/templates/level/index.html.twig
@@ -3,15 +3,16 @@
 {% block title %}Level{% endblock %}
 
 {% block body %}
+    <p id="subtitulo">Rutina por Niveles</p>
     {% for level in levels %}
+        <div id="rutinabloque">
+            {% if  level.price  > 0 %}
 
-{% if {{ level.price }} == 0 %}
-
-        <a ><h1 style="color: red">{{ level.name }}</h1>
-            <h2 style="color: red">{{ level.price }}€</h2></a>
-        {% else %}
-            <a ><h1>{{  level.name }}</h1>
-                <h2>{{ level.price }}€</h2></a>
+                <a href="{{ path('level',{'id':level.id} )}}"><h1 style="color: red">{{ level.name }}</h1>
+                    <h2 style="color: red">{{ level.price }}€</h2></a>
+            {% else %}
+                <a  href="{{ path('level',{'id':level.id} )}}"><h1>{{  level.name }}</h1>
+                    <h2>{{ level.price }}€</h2></a>
             {% endif %}
 
 
