--- a/public/css/sticky-footer-navbar.css
+++ b/public/css/sticky-footer-navbar.css
@@ -151,10 +151,15 @@ body {
     padding-right:10%;
 }
 
-.registro{
+
+
+.salir{
     clear:both;
     float:right;
     padding-right:10%;
+    padding-top: 2%;
+    text-decoration: none;
+    color: black;
 }
 ul li {display:inline-block;}
 
@@ -638,12 +643,18 @@ fieldset.radioEmpty input:focus{
 
 #registro {
     background-color: #DAC5C5;
-    margin-left: 500px;
-    margin-right: 500px;
+    margin-left: 35%;
+    margin-right: 35%;
     border-radius: 20px;
     border: 1px solid;
     height: 350px;
 
+}
+
+.registro {
+    clear: both;
+    float: right;
+    padding-right: 10%;
 }
 #fondoreg{
     background-image: url('../Imagenes/imagenRegistro.png');
@@ -655,27 +666,27 @@ fieldset.radioEmpty input:focus{
 }
 
 .reg-form {
-    margin-left: 40px;
+    margin-left: 10%;
     margin-top: 10px;
 }
 
 .reg-form2 {
-    margin-left: 52px;
+    margin-left: 13%;
     margin-top: 10px;
 }
 
 .reg-form3 {
-    margin-left: 58px;
+    margin-left: 15%;
     margin-top: 10px;
 }
 
 .reg-form4 {
-    margin-left: 17px;
+    margin-left: 4%;
     margin-top: 10px;
 }
 
 .reg-form5 {
-    margin-left: 42px;
+    margin-left: 11%;
     margin-top: 10px;
 }
 .reg-form input {
@@ -704,7 +715,7 @@ fieldset.radioEmpty input:focus{
 }
 
 #almilialeregalaronelcredito{
-    margin-left: 200px;
+    margin-left: 15%;
 }
 
 .exercisebloque {
@@ -732,3 +743,249 @@ fieldset.radioEmpty input:focus{
 #margin-reg {
     padding-top: 60px;
 }
+
+#fix{margin-bottom: 20px;
+    width: 100%}
+
+#editaperf {
+    background-color: #DAC5C5;
+    margin-left: 30%;
+    margin-right: 30%;
+    border-radius: 20px;
+    border: 1px solid;
+    height: 550px;
+
+}
+
+.useredit1 {
+    margin-left: 94px;
+    margin-top: 10px;
+}
+
+.useredit2 {
+    margin-left: 61px;
+    margin-top: 10px;
+}
+.useredit3 {
+    margin-left: 82px;
+    margin-top: 10px;
+}
+
+.useredit4 {
+    margin-left: 20px;
+    margin-top: 10px;
+}
+.useredit5 {
+    margin-left: 24px;
+    margin-top: 10px;
+}
+.useredit6 {
+    margin-left: 79px;
+    margin-top: 10px;
+}
+.useredit7 {
+    margin-left: 75px;
+    margin-top: 10px;
+}
+.useredit8 {
+    margin-left: 72px;
+    margin-top: 10px;
+}
+.useredit9 {
+    margin-left: 73px;
+    margin-top: 10px;
+}
+
+.volver {
+    margin-top: 30px;
+    background: #CC3B3B;
+    font-style: normal;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    margin-left: 185px;
+    border-radius: 5px;
+}
+
+.datos {
+    background-color:#DAC5C5;
+    color: black;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 10%;
+    height: 70px;
+    border-radius: 4px;
+    font-size: 24px;
+    padding-top: 30px;
+    text-decoration: none;
+}
+
+.datos1{
+    margin-left: 10%;
+    margin-right: 10%;
+    text-decoration: none;
+    color: black;
+}
+
+.datos2 {
+    float: right;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-decoration: none;
+    color: black;
+
+}
+
+.rutinasub{
+    color: black;
+    text-decoration: none;
+
+}
+.rutinacceso {
+    color: white;
+    background-color: #CC3B3B;
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.precio {
+    color: #CC3B3B;
+}
+
+.rutinabloque {
+    background-color: #DAC5C5;
+    margin-left: 30%;
+    margin-right: 30%;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+
+/** --------------------------------------------- **/
+
+.letrasex{
+    color:black;
+    font-size: 12px;
+    text-decoration: none;
+
+}
+
+.imgex{
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    width: 330px;
+
+}
+
+.buttonex{
+    position: absolute;
+    top: 50%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+}
+
+.buttonex:hover{
+    position: absolute;
+    top: 50%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+    width: 55px;
+    height: 55px;
+}
+
+.textoencima{
+    position: absolute;
+    top: 20px;
+    left: 10px;
+
+
+}
+
+
+.containerex {
+    float: left;
+    margin-left: 50px;
+    margin-top: 40px;
+    margin-right: 60px;
+    position: relative;
+    display: inline-block;
+    text-align: left;
+}
+
+.retobloque {
+    background-color: #DAC5C5;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 15px;
+    text-align: left;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.rutinasub2{
+    color: black;
+    text-decoration: none;
+    font-size: 25px;
+    font-weight: 900 bold;
+    margin-left: 150px;
+
+
+}
+
+#favimg{
+    position: absolute;
+    top: 50%;
+    left: 290px;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+
+
+}
+
+#favimg:hover{
+    position: absolute;
+    top: 50%;
+    left: 290px;
+    transform: translate(-50%, -50%);
+    width: 55px;
+    height: 55px;
+
+
+}
+
+.containerej {
+    float: left;
+    margin-left: 50px;
+    margin-top: 30px;
+    margin-right: 60px;
+    position: relative;
+    display: inline-block;
+    text-align: left;
+
+}
+
+.textoencima2{
+    position: absolute;
+    top: 20px;
+    left: 10px;
+
+
+
+}
+
+.imgex2{
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    width: 330px;
+    height: 120px;
+
+
+}
+
