--- a/templates/exercise/index.html.twig
+++ b/templates/exercise/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ExerciseController!{% endblock %}
+{% block title %}Hello ExerciseController2!{% endblock %}
 
 {% block body %}
     {{ dump(exercises) }}
