--- a/templates/level/routines.html.twig
+++ b/templates/level/routines.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ExerciseController!{% endblock %}
+{% block title %}Hello ExerciseController2!{% endblock %}
 
 {% block body %}
 
@@ -9,8 +9,12 @@
     {% for level in levels %}
 
 
-        <a ><h1>{{ level.name}}</h1></a>
-        <a ><h1>Series:{{ level.series}}Repeticiones:{{ level.repetitions}}</h1></a>
+        <div class="containerej">
+
+            <img src="/Imagenes/EJercicios/fondoejercicio.png" class="imgex2">
+        <div class="textoencima2"><a class="letrasex"><h1>{{ level.name}}</h1></a>
+            <a class="letrasex"><h1>Series:{{ level.series}} <br> Repeticiones:{{ level.repetitions}}</h1></a></div>
+            <a href=" {{ level.multimedia }}"><img src="/Imagenes/EJercicios/ic_play_circle_outline_48px-512.png" class="buttonex"></a>
 
 
 
