--- a/templates/muscle/index.html.twig
+++ b/templates/muscle/index.html.twig
@@ -10,20 +10,18 @@
 
             <div>
 
-                <a href="{{ path('exercisemuscle',{'id':musclegroups.id} )}}"><h1 class="tituloej">{{ musclegroups.name }}</h1></a>
+                <a class="tituloej" href="{{ path('exercisemuscle',{'id':musclegroups.id} )}}"><h1>{{ musclegroups.name }}</h1></a>
                 <a href="{{ path('exercisemuscle',{'id':musclegroups.id} )}}"><img class="exerciseimg" src="{{ musclegroups.img }}" align="center"></a>
 
                 </body>
 
 
 
-
+                <p id="fix">Arreglo</p>
 
             </div>
         </div>
-        <div>
-            <p>PARRAFO PARA QUE NO SE JODA EL FOOTER</p>
-        </div>
+
     {% endfor %}
 {% endblock %}
 
