--- a/templates/perfil/formedit.html.twig
+++ b/templates/perfil/formedit.html.twig
@@ -1,13 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="col-lg-4 box-form">
-        <h2>Editar Perfil</h2>
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" class="btn btn-success" value="Guardar Cambios">
-        <a href="{{ path('app_perfil') }}">Volver al Perfil</a>
-        {{ form_errors(form) }}
-        {{ form_end(form) }}
+    <div id="fondoreg">
+        <div id="margin-reg">
+            <div id="editaperf"  class="col-lg-4 box-form">
+                <h2 id="regtitulo">Editar Perfil</h2>
+                <div class="reg-form">
+                    {{ form_start(form) }}
+                    {{ form_widget(form) }}
+                    <input type="submit" class="btn btn-success" value="Guardar Cambios">
+                    <br>
+                    <br>
+                    <a class="volver" href="{{ path('app_perfil') }}">Volver al Perfil</a>
+                    {{ form_errors(form) }}
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
