--- a/templates/user/regform.html.twig
+++ b/templates/user/regform.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div id="fondoreg">
         <div id="margin-reg">
-            <div id="registro" class="col-lg-4 box-form">
+            <div id="registro">
                 <h2 id="regtitulo">Registrate</h2>
                 <div class="reg-form">
                     {{ form_start(form) }}
